[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "menglong"
version = "0.1.0"
description = "MengLong Agent SDK - 一个用于创建Agent的Python库"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "anthropic[bedrock]>=0.75.0",
    "boto3>=1.38.0",
    "google-genai>=1.52.0",
    "httpx[socks]>=0.28.1",
    "openai>=1.75.0",
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "rich>=13.7.0",
    "trio>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/menglong"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
